--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "scripts": {
     "dev": "vite dev",
-    "build": "vite build",
+    "build": "vite build && zip build.synth.v1.zip build.synth.v1",
     "preview": "vite preview"
   },
   "devDependencies": {
