--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "decimal.js": "^10.4.1",
     "electron": "^18.0.3",
     "node-sass": "^7.0.3",
+    "numeric": "^1.2.6",
     "svelte": "3.50.1",
     "vite": "3.1.3",
     "vite-plugin-glsl": "^0.2.2"
