--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": ">=16"
   },
   "scripts": {
-    "dev": "vite dev",
+    "dev": "vite --port 8000 dev",
     "build": "vite build && zip build.synth.v1.zip build.synth.v1",
     "preview": "vite preview"
   },
