--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -4,13 +4,13 @@
     "src": "assets/aui/aui-logo.svg"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-41a28d1c.js",
+    "file": "_app/immutable/start-8bfac675.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
       "_preload-helper-aa6bc0ce.js",
       "_index-f5a154de.js",
-      "_singletons-c719e9fa.js"
+      "_singletons-8348aaaa.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
@@ -33,46 +33,46 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-056247d2.js",
+    "file": "_app/immutable/components/error.svelte-d82fe651.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
     "isEntry": true,
     "imports": [
       "_index-f5a154de.js",
-      "_stores-13cb5aa4.js"
+      "_stores-68b6e630.js"
     ]
   },
   "src/aui/+layout.svelte": {
-    "file": "_app/immutable/components/pages/aui/_layout.svelte-0f5f8294.js",
+    "file": "_app/immutable/components/pages/aui/_layout.svelte-36b76834.js",
     "src": "src/aui/+layout.svelte",
     "isEntry": true,
     "imports": [
       "_index-f5a154de.js",
-      "_Defs-459fb066.js",
+      "_defs-80b74e82.js",
       "_API-64f1f2c3.js"
     ]
   },
   "src/aui/[type]/+layout.svelte": {
-    "file": "_app/immutable/components/pages/aui/_type_/_layout.svelte-f1d2104c.js",
+    "file": "_app/immutable/components/pages/aui/_type_/_layout.svelte-52e6b076.js",
     "src": "src/aui/[type]/+layout.svelte",
     "isEntry": true,
     "imports": [
       "_index-f5a154de.js",
-      "_Toggle-3ca16f02.js",
+      "_Toggle-e7355505.js",
       "_Rect-d7cdf2d5.js",
-      "_Defs-459fb066.js",
-      "_stores-13cb5aa4.js",
-      "_singletons-c719e9fa.js"
+      "_defs-80b74e82.js",
+      "_stores-68b6e630.js",
+      "_singletons-8348aaaa.js"
     ]
   },
   "src/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-12ab5c76.js",
+    "file": "_app/immutable/components/pages/_page.svelte-c7e24a5b.js",
     "src": "src/+page.svelte",
     "isEntry": true,
     "imports": [
       "_index-f5a154de.js",
       "_index-892500ad.js",
       "_preload-helper-aa6bc0ce.js",
-      "_Toggle-3ca16f02.js"
+      "_Toggle-e7355505.js"
     ]
   },
   "src/aui/+page.svelte": {
@@ -116,8 +116,8 @@
       "__layout-d33eaf18.js"
     ]
   },
-  "_singletons-c719e9fa.js": {
-    "file": "_app/immutable/chunks/singletons-c719e9fa.js",
+  "_singletons-8348aaaa.js": {
+    "file": "_app/immutable/chunks/singletons-8348aaaa.js",
     "imports": [
       "_index-892500ad.js"
     ]
@@ -137,21 +137,21 @@
   "__layout-d33eaf18.js": {
     "file": "_app/immutable/chunks/_layout-d33eaf18.js"
   },
-  "_stores-13cb5aa4.js": {
-    "file": "_app/immutable/chunks/stores-13cb5aa4.js",
+  "_stores-68b6e630.js": {
+    "file": "_app/immutable/chunks/stores-68b6e630.js",
     "imports": [
       "_index-f5a154de.js",
-      "_singletons-c719e9fa.js"
+      "_singletons-8348aaaa.js"
     ]
   },
-  "_Defs-459fb066.js": {
-    "file": "_app/immutable/chunks/Defs-459fb066.js"
+  "_defs-80b74e82.js": {
+    "file": "_app/immutable/chunks/defs-80b74e82.js"
   },
   "_API-64f1f2c3.js": {
     "file": "_app/immutable/chunks/API-64f1f2c3.js"
   },
-  "_Toggle-3ca16f02.js": {
-    "file": "_app/immutable/chunks/Toggle-3ca16f02.js",
+  "_Toggle-e7355505.js": {
+    "file": "_app/immutable/chunks/Toggle-e7355505.js",
     "imports": [
       "_index-f5a154de.js",
       "_index-892500ad.js",
@@ -176,7 +176,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-f1d791d3.js",
+    "file": "_app/immutable/chunks/1-8aa4bd2c.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
@@ -184,7 +184,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-cf02dd7d.js",
+    "file": "_app/immutable/chunks/2-f5f47c73.js",
     "src": ".svelte-kit/generated/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
@@ -192,7 +192,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/3.js": {
-    "file": "_app/immutable/chunks/3-3341e038.js",
+    "file": "_app/immutable/chunks/3-b3b76451.js",
     "src": ".svelte-kit/generated/nodes/3.js",
     "isDynamicEntry": true,
     "imports": [
@@ -200,7 +200,7 @@
     ]
   },
   ".svelte-kit/generated/nodes/4.js": {
-    "file": "_app/immutable/chunks/4-0a7d4701.js",
+    "file": "_app/immutable/chunks/4-0357a010.js",
     "src": ".svelte-kit/generated/nodes/4.js",
     "isDynamicEntry": true,
     "imports": [
