--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   },
   "scripts": {
     "dev": "vite --port 8000 --host 0.0.0.0 dev",
-    "build": "rm build.synth.v1.zip && vite build && zip build.synth.v1.zip build.synth.v1",
-    "preview": "vite preview"
+    "build": "rm build.synth.v1.zip & vite build && zip build.synth.v1.zip build.synth.v1",
+    "preview": "vite --port 8000 preview"
   },
   "devDependencies": {
     "@macfja/svelte-adapter-neutralino": "^0.3.0",
